前端架构详谈（1）纯前端发布

--- a/大型项目前端架构浅谈.md
+++ b/大型项目前端架构浅谈.md
@@ -1,6 +1,43 @@
 
 <h1>大型项目前端架构浅谈</h1>
 
+目录：
+
+* 1、综合
+    * 1.1、使用场景
+    * 1.2、核心思想
+    * 1.3、切入角度
+    * 1.4、其他
+* 2、基础层设计
+    * 2.1、自建Gitlab
+    * 2.2、版本管理
+    * 2.3、自动编译发布Jenkins
+    * 2.4、纯前端版本发布
+    * 2.5、统一脚手架
+    * 2.6、Node中间层
+    * 2.7、埋点系统
+    * 2.8、监控和报警系统
+    * 2.9、安全管理
+    * 2.10、Eslint
+    * 2.11、灰度发布
+    * 2.12、前后端分离
+    * 2.13、Mock
+    * 2.14、定期备份
+* 3、应用层设计
+    * 3.1、多页和单页
+    * 3.2、以应用为单位划分前端项目
+    * 3.3、基础组件库的建设
+    * 3.4、技术栈统一
+    * 3.5、浏览器兼容
+    * 3.6、内容平台建设
+    * 3.7、权限管理平台
+    * 3.8、登录系统设计（单点登录）
+    * 3.9、CDN
+    * 3.10、负载均衡
+    * 3.11、多端共用一套接口
+* 4、总结
+
+
 <h2>1、综合</h2>
 
 我在2年之前，写过一篇中小型项目的前端架构浅谈。随着能力的上升，以及在阿里巴巴工作过，是时候写一篇大型项目的前端架构分析了。
@@ -129,7 +166,7 @@
 
 提高开发人员在多个项目之间的快速切换能力，提高项目可维护性，统一公司技术栈，避免因为环境不同导致奇怪的问题。
 
-<h3>2.6、Node中间层管理</h3>
+<h3>2.6、Node中间层</h3>
 
 适用场景：需要SEO且前端使用React、vue，或前端介入后端逻辑，直接读取后端服务或者数据库的情况。
 
